fixed overflow style

--- a/css/all.css
+++ b/css/all.css
@@ -359,7 +359,9 @@ template {
 /*  h2 font style */
 /*  position fixed or absolute */
 /* scrollbar style */
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -369,6 +371,8 @@ body {
   height: 100vh;
   color: var(--fontColor);
   font-family: 'Noto Sans TC' !important;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 body::-webkit-scrollbar {
@@ -390,7 +394,9 @@ body::-webkit-scrollbar-button {
   display: none;
 }
 
-ol, ul, li {
+ol,
+ul,
+li {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -408,7 +414,11 @@ img {
   height: 100%;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   margin: 0;
   font-weight: normal;
 }
@@ -899,7 +909,6 @@ p {
 
 #wrapper {
   padding-top: 7.5rem;
-  overflow: hidden;
 }
 
 .banner {
