--- a/scss/layout/_wrapper.scss
+++ b/scss/layout/_wrapper.scss
@@ -1,4 +1,3 @@
 #wrapper {
     padding-top: 7.5rem;
-    overflow: hidden;
 }
